# stratification_learning

./: .gitignore  CMakeLists.txt
include/: geometricComplex.h
src/: except.cpp  except.h  geometry.h  geometry.hpp  linalg.h  linalg.hpp  matrix.hpp  num.h  num.hpp  struct.h  struct.hpp  structures.h  topology.h  topology.hpp  toprep.cpp  toprep.h  toprep.hpp  tstep.cpp  tstep.h  tstep.hpp  tstepdouble.cpp  tstepdouble.h  tstepdouble.hpp  util.h
test/: .gitignore  CMakeLists.txt  run-all-tests.cpp  test-complex.cpp  test-mat.cpp  test-module.cpp  test-num.cpp  test-simplex.cpp  test-struct.cpp  test-triangulation.cpp  test-vec.cpp  tests.cpp
